--- a/frontend/src/components/layout/pageLayout/pageLayout.module.css
+++ b/frontend/src/components/layout/pageLayout/pageLayout.module.css
@@ -92,10 +92,6 @@
       "footer";
   }
 
-  .aside {
-    display: none;
-  }
-
   .mainPadding {
     padding-inline: var(--step-0);
   }
